--- a/installer/EC_40_MM/EC_40_MergeModule.wxs
+++ b/installer/EC_40_MM/EC_40_MergeModule.wxs
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
 	<Module Id="EC_40_MM" Language="1033" Version="4.0.0.0">
-		<Package Id="ac1e0a8a-7a0d-45d8-8798-f9d9c9e4c776" Keywords="SIL; Encoding Conversion; Transliteration; EncConverters" 
-             Description="EncConverter core 4.0 Merge Module -- Include in any client application deployment project which uses the EncConverters objects" 
-             Comments="Common installer module for SIL's version 4.0 of the EncConverter's core" Manufacturer="SIL International" InstallerVersion="200" Languages="1033" 
+		<Package Id="ac1e0a8a-7a0d-45d8-8798-f9d9c9e4c776" Keywords="SIL; Encoding Conversion; Transliteration; EncConverters"
+             Description="EncConverter core 4.0 Merge Module -- Include in any client application deployment project which uses the EncConverters objects"
+             Comments="Common installer module for SIL's version 4.0 of the EncConverter's core" Manufacturer="SIL International" InstallerVersion="200" Languages="1033"
              SummaryCodepage="1252" />
 
 		<Directory Id="TARGETDIR" Name="SourceDir">
@@ -504,115 +504,116 @@
 						<Component Id="EC4.0.0.0PluginDetails.xml" Guid="579194FE-37AA-47a3-A089-B0F1F17415FB">
 							<File Id="EC4.0.0.0PluginDetails.xml" Name="EC 4.0.0.0 Plugin Details.xml" KeyPath="yes" Source="..\..\redist\EC\Plugins\EC 4.0.0.0 Plugin Details.xml"/>
 						</Component>
-            <!-- this was missing, but it's necessary or the ICU DLLs above won't work 
+						<!-- this was missing, but it's necessary or the ICU DLLs above won't work 
 								(read: if you're going to put the EC-related ICU DLLs in this MM, then this should go here -->
-            <Component Id="IcuEC_4.0.0.0_PluginDetails.xml" Guid="{7CA84960-2519-461C-8E11-764934F0DBA1}">
-              <File Id="IcuEC_4.0.0.0_PluginDetails.xml" Name="IcuEC 4.0.0.0 Plugin Details.xml" KeyPath="yes" Source="..\..\redist\EC\Plugins\IcuEC 4.0.0.0 Plugin Details.xml"/>
-            </Component>
-          </Directory>
-				</Directory>
-
-				<Directory Id="CommonFilesFolder" SourceName="Common Files Folder">
-					<Directory Id="EcSIL" Name="SIL">
-						<Component Id="ECDriver.dll" Guid="4c632e67-b66b-4a7b-a6bb-f99d93abdcca">
-							<File Id="ECDriver.dll" Name="ECDriver.dll" KeyPath="yes" Source="..\..\output\Win32\release\ECDriver.dll"/>
+						<Component Id="IcuEC_4.0.0.0_PluginDetails.xml" Guid="{7CA84960-2519-461C-8E11-764934F0DBA1}">
+							<File Id="IcuEC_4.0.0.0_PluginDetails.xml" Name="IcuEC 4.0.0.0 Plugin Details.xml" KeyPath="yes" Source="..\..\redist\EC\Plugins\IcuEC 4.0.0.0 Plugin Details.xml"/>
 						</Component>
-						<Directory Id="Help" Name="Help">
-							<Component Id="CPHelp" Guid="58fac2f3-e469-4e62-a5a1-970647ebe5fc">
-								<File Id="CPHelp" Name="Code Page Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Code Page Converter Plug-in About box.mht"/>
-							</Component>
-							<Component Id="CmpdHelp" Guid="a2557ea3-3ec1-41aa-8a06-af9fccfd07da">
-								<File Id="CmpdHelp" Name="Compound Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Compound Converter Plug-in About box.mht"/>
-							</Component>
-							<Component Id="FallBackHelp" Guid="cd14321a-d6c0-44aa-b59d-773e9b060d34">
-								<File Id="FallBackHelp" Name="Fallback Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Fallback Converter Plug-in About box.mht"/>
-							</Component>
-							<Component Id="TECkitHelp" Guid="292dcfa4-3602-4861-ae01-6b4875707dec">
-								<File Id="TECkitHelp" Name="TECkit Map Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\TECkit Map Plug-in About box.mht"/>
-							</Component>
-							<Component Id="CantReadMhtFiles.htm" Guid="{F3B39444-A2B0-40D8-8863-8FE1E8194FF4}">
-								<File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\CantReadMhtFiles.htm"/>
-							</Component>
-							<Component Id="IcuRegex" Guid="{786CA242-4204-46B7-86D5-93ED456710B5}">
-								<File Id="IcuRegex" Name="ICU Regular Expression Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Regular Expression Plug-in About box.mht"/>
-							</Component>
-							<Component Id="IcuTranslit" Guid="{024219A1-29EB-4D20-BB9A-DB9E3C3F1743}">
-								<File Id="IcuTranslit" Name="ICU Transliterators Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Transliterators Plug-in About box.mht"/>
-							</Component>
-							<Component Id="ICU_Converters_Plugin_About_box.htm" Guid="{963A2D88-6CFE-4C91-8830-CD6F8A3872E8}">
-								<!-- The following File ID has been truncated to suppress ICE03 string overflow in the shortcut that uses it -->
-								<File Id="ICU_Converters_About" Name="ICU Converters Plug-in About box.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box.htm"/>
-							</Component>
-							<Directory Id="ICUConvPlug" Name="ICU Converters Plug-in About box_files">
-								<Component Id="image008.jpg" Guid="{C3970194-5CAF-44A9-B59E-F7AD6CF3F84D}">
-									<File Id="image008.jpg" Name="image008.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image008.jpg"/>
-								</Component>
-								<Component Id="image001.png" Guid="{F166A049-8724-4EA5-80F0-12B55A48F4BF}">
-									<File Id="image001.png" Name="image001.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image001.png"/>
-								</Component>
-								<Component Id="image003.png" Guid="{C2DA1740-EDCF-49E2-8E62-C07AB42C476B}">
-									<File Id="image003.png" Name="image003.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image003.png"/>
-								</Component>
-								<Component Id="image007.png" Guid="{1C4C6530-7E4F-411E-BF80-F3AC653219A6}">
-									<File Id="image007.png" Name="image007.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image007.png"/>
-								</Component>
-								<Component Id="image002.jpg" Guid="{448BEBF5-5EE0-4474-B92C-CD3B3B22442F}">
-									<File Id="image002.jpg" Name="image002.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image002.jpg"/>
-								</Component>
-								<Component Id="image004.jpg" Guid="{DFF6B368-EF7B-405E-BC57-F25CA8D3B821}">
-									<File Id="image004.jpg" Name="image004.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image004.jpg"/>
-								</Component>
-								<Component Id="filelist.xml" Guid="{E6812F05-9BD4-4DBF-BD33-86E99A7B1A5E}">
-									<File Id="filelist.xml" Name="filelist.xml" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\filelist.xml"/>
-								</Component>
-							</Directory>
-						</Directory>
 					</Directory>
 				</Directory>
-				
-				<!--This is still needed to open authentication for the repository file folder-->
-				<Directory Id="CommonAppDataFolder" SourceName="AppData">
-					<Directory Id="AppDataSIL" Name="SIL">
-						<Directory Id="AppDataECFolder" Name="Repository">
-							<Component Id="CreateRepositoryFolder" Guid="4C784F73-E98B-440C-91D8-7D07ED0DB41B">
-								<CreateFolder>
-									<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
-								</CreateFolder>
-							</Component>
-						</Directory>
-						<Directory Id="AppDataMapsTablesFolder" Name="MapsTables">
-							<Component Id="CreateMapsTablesFolder" Guid="36C7C46E-B071-4B62-8AF8-2DA691F45C3A">
-								<CreateFolder>
-									<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
-								</CreateFolder>
-							</Component>
-						</Directory>
-					</Directory>
-				</Directory>
+			</Directory>
 
-				<Directory Id="StartMenuFolder" SourceName="Start Menu">
-					<Directory Id="ProgramMenuFolder" SourceName="Programs">
-						<Directory Id="SIL_Converters" Name="SIL Converters">
-							<Directory Id="SILConvHelp" Name="Help">
-								<Component Id="HelpShortcuts" Guid="A84EFA8C-D422-4D5D-B55B-C4FCDD6ECE61" KeyPath="yes">
-									<Shortcut Id="CPPluginHelp" Directory="SILConvHelp" Name="Code Page Plug-in Help" Target="[!CPHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="CmpdPluginHelp" Directory="SILConvHelp" Name="Compound Converter Plug-in Help" Target="[!CmpdHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="FallbackPluginHelp" Directory="SILConvHelp" Name="Primary-Fallback Converter Plug-in Help" Target="[!FallBackHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="TECkitPluginHelp" Directory="SILConvHelp" Name="TECkit Converter Plug-in Help" Target="[!TECkitHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="ICUConvHelp" Directory="SILConvHelp" Name="ICU Converters Help" Target="[!ICU_Converters_About]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="ICUTranlitHelp" Directory="SILConvHelp" Name="ICU Transliterators Help" Target="[!IcuTranslit]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<Shortcut Id="ICURegexHelp" Directory="SILConvHelp" Name="ICU Regular Expression Help" Target="[!IcuRegex]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-									<!-- The next item is junk to make validation pass on ICE18 -->
-									<CreateFolder/>
-								</Component>
-							</Directory>
+			<Directory Id="CommonFilesFolder" SourceName="Common Files Folder">
+				<Directory Id="EcSIL" Name="SIL">
+					<Component Id="ECDriver.dll" Guid="4c632e67-b66b-4a7b-a6bb-f99d93abdcca">
+						<File Id="ECDriver.dll" Name="ECDriver.dll" KeyPath="yes" Source="..\..\output\Win32\release\ECDriver.dll"/>
+					</Component>
+					<Directory Id="Help" Name="Help">
+						<Component Id="CPHelp" Guid="58fac2f3-e469-4e62-a5a1-970647ebe5fc">
+							<File Id="CPHelp" Name="Code Page Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Code Page Converter Plug-in About box.mht"/>
+						</Component>
+						<Component Id="CmpdHelp" Guid="a2557ea3-3ec1-41aa-8a06-af9fccfd07da">
+							<File Id="CmpdHelp" Name="Compound Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Compound Converter Plug-in About box.mht"/>
+						</Component>
+						<Component Id="FallBackHelp" Guid="cd14321a-d6c0-44aa-b59d-773e9b060d34">
+							<File Id="FallBackHelp" Name="Fallback Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Fallback Converter Plug-in About box.mht"/>
+						</Component>
+						<Component Id="TECkitHelp" Guid="292dcfa4-3602-4861-ae01-6b4875707dec">
+							<File Id="TECkitHelp" Name="TECkit Map Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\TECkit Map Plug-in About box.mht"/>
+						</Component>
+						<Component Id="CantReadMhtFiles.htm" Guid="{F3B39444-A2B0-40D8-8863-8FE1E8194FF4}">
+							<File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\CantReadMhtFiles.htm"/>
+						</Component>
+						<Component Id="IcuRegex" Guid="{786CA242-4204-46B7-86D5-93ED456710B5}">
+							<File Id="IcuRegex" Name="ICU Regular Expression Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Regular Expression Plug-in About box.mht"/>
+						</Component>
+						<Component Id="IcuTranslit" Guid="{024219A1-29EB-4D20-BB9A-DB9E3C3F1743}">
+							<File Id="IcuTranslit" Name="ICU Transliterators Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Transliterators Plug-in About box.mht"/>
+						</Component>
+						<Component Id="ICU_Converters_Plugin_About_box.htm" Guid="{963A2D88-6CFE-4C91-8830-CD6F8A3872E8}">
+							<!-- The following File ID has been truncated to suppress ICE03 string overflow in the shortcut that uses it -->
+							<File Id="ICU_Converters_About" Name="ICU Converters Plug-in About box.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box.htm"/>
+						</Component>
+						<Directory Id="ICUConvPlug" Name="ICU Converters Plug-in About box_files">
+							<Component Id="image008.jpg" Guid="{C3970194-5CAF-44A9-B59E-F7AD6CF3F84D}">
+								<File Id="image008.jpg" Name="image008.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image008.jpg"/>
+							</Component>
+							<Component Id="image001.png" Guid="{F166A049-8724-4EA5-80F0-12B55A48F4BF}">
+								<File Id="image001.png" Name="image001.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image001.png"/>
+							</Component>
+							<Component Id="image003.png" Guid="{C2DA1740-EDCF-49E2-8E62-C07AB42C476B}">
+								<File Id="image003.png" Name="image003.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image003.png"/>
+							</Component>
+							<Component Id="image007.png" Guid="{1C4C6530-7E4F-411E-BF80-F3AC653219A6}">
+								<File Id="image007.png" Name="image007.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image007.png"/>
+							</Component>
+							<Component Id="image002.jpg" Guid="{448BEBF5-5EE0-4474-B92C-CD3B3B22442F}">
+								<File Id="image002.jpg" Name="image002.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image002.jpg"/>
+							</Component>
+							<Component Id="image004.jpg" Guid="{DFF6B368-EF7B-405E-BC57-F25CA8D3B821}">
+								<File Id="image004.jpg" Name="image004.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image004.jpg"/>
+							</Component>
+							<Component Id="filelist.xml" Guid="{E6812F05-9BD4-4DBF-BD33-86E99A7B1A5E}">
+								<File Id="filelist.xml" Name="filelist.xml" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\filelist.xml"/>
+							</Component>
+						</Directory>
+					</Directory>
+				</Directory>
+			</Directory>
+
+			<!--This is still needed to open authentication for the repository file folder-->
+			<Directory Id="CommonAppDataFolder" SourceName="AppData">
+				<Directory Id="AppDataSIL" Name="SIL">
+					<Directory Id="AppDataECFolder" Name="Repository">
+						<Component Id="CreateRepositoryFolder" Guid="4C784F73-E98B-440C-91D8-7D07ED0DB41B">
+							<CreateFolder>
+								<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
+							</CreateFolder>
+						</Component>
+					</Directory>
+					<Directory Id="AppDataMapsTablesFolder" Name="MapsTables">
+						<Component Id="CreateMapsTablesFolder" Guid="36C7C46E-B071-4B62-8AF8-2DA691F45C3A">
+							<CreateFolder>
+								<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
+							</CreateFolder>
+						</Component>
+					</Directory>
+				</Directory>
+			</Directory>
+
+			<Directory Id="StartMenuFolder" SourceName="Start Menu">
+				<Directory Id="ProgramMenuFolder" SourceName="Programs">
+					<Directory Id="SIL_Converters" Name="SIL Converters">
+						<Directory Id="SILConvHelp" Name="Help">
+							<Component Id="HelpShortcuts" Guid="A84EFA8C-D422-4D5D-B55B-C4FCDD6ECE61" KeyPath="yes">
+								<Shortcut Id="CPPluginHelp" Directory="SILConvHelp" Name="Code Page Plug-in Help" Target="[!CPHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="CmpdPluginHelp" Directory="SILConvHelp" Name="Compound Converter Plug-in Help" Target="[!CmpdHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="FallbackPluginHelp" Directory="SILConvHelp" Name="Primary-Fallback Converter Plug-in Help" Target="[!FallBackHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="TECkitPluginHelp" Directory="SILConvHelp" Name="TECkit Converter Plug-in Help" Target="[!TECkitHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICUConvHelp" Directory="SILConvHelp" Name="ICU Converters Help" Target="[!ICU_Converters_About]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICUTranlitHelp" Directory="SILConvHelp" Name="ICU Transliterators Help" Target="[!IcuTranslit]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICURegexHelp" Directory="SILConvHelp" Name="ICU Regular Expression Help" Target="[!IcuRegex]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<!-- The next item is junk to make validation pass on ICE18 -->
+								<CreateFolder/>
+							</Component>
 						</Directory>
 					</Directory>
 				</Directory>
 			</Directory>
 		</Directory>
+
 		<!-- The following section launches the installed file EncConvertersAppDataMover40.exe but hides its DOS window -->
-		<CustomAction Id="SetAppDataMoverData" Return="check" Property="LaunchAppDataMover" Value="[#EncConvertersAppDataMover40.exe]" />
+		<CustomAction Id="SetAppDataMoverData" Return="check" Property="LaunchAppDataMover" Value="[!EncConvertersAppDataMover40.exe]" />
 		<CustomAction Id="LaunchAppDataMover" Return="ignore" Impersonate="no" Execute="deferred" Script="vbscript">
 			<![CDATA[
 dim EncConvertersAppDataMoverPath
